minikube/0905/fortune/configmap/fortune-configmap-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fortune-configmap
  labels:
    app: fortune-configmap
spec:
  containers:
    - name: html-generator
      image: 25thnight/fortune:env
      volumeMounts:
        - name: html
          mountPath: /var/www
    - name: web-server
      image: nginx:alpine
      ports:
        - containerPort: 80
          name: fortune
      volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
          readOnly: true
        - name: config
          mountPath: /etc/nginx/conf.d
          readOnly: true
  volumes:
    - name: html
      emptyDir: {}
    - name: config
      configMap:
        name: fortune-config
        items:
          - key: nginx-config.conf
            path: gzip.conf
