minikube/0905/fortune/configmap/fortune-pod-configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fortune-configmap
  labels:
    app: fortune
spec:
  containers:
    - name: html-generator
      image: 25thnight/fortune:env
      volumeMounts:
        - name: html
          mountPath: /var/www
    - name: web-server
      image: nginx:alpine
      ports:
        - containerPort: 80
          name: fortune
      volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
          readOnly: true
  volumes:
    - name: html
      emptyDir: {}
