minikube/0905/fortune/configmap/fortune-nodeport-configmap.yaml
apiVersion: v1
kind: Service
metadata:
  name: fortune-nodeport-configmap
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: fortune
  selector:
    app: fortune-configmap
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
