minikube/0905/fortune/configmap/fortune-ingress-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fortune
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: lion.fortune.com
    http:
      paths:
      - backend:
          service:
            name: fortune-nodeport
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: fortune-nodeport-configmap
            port:
              number: 80
        path: /config
        pathType: Prefix
